Fix header background leaving black space in some cases
This old code was there to handle some cases with older nav and banner
css I think, where if too big, the header background would leak over
some body part.

But it doesn't seem to happen anymore after previous css improvements

--- a/assets/scss/components/header-background.scss
+++ b/assets/scss/components/header-background.scss
@@ -5,7 +5,11 @@ $color-gradient-end: #6423d3;
 
 .header-background {
   position: fixed;
-  height: 560px;
+
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+
   top: 0;
   left: 0;
   bottom: 0;
@@ -16,8 +20,4 @@ $color-gradient-end: #6423d3;
   z-index: -1;
   background-image: url(/img/header-home-background.svg),
     linear-gradient(to left, $color-gradient-start, $color-gradient-end);
-
-  @include tablet {
-    height: 75vh;
-  }
 }
